--- a/hma.env
+++ b/hma.env
@@ -1,5 +1,5 @@
-HMA_USER=robotko
-HMA_PASS=q1w2e3638699
+HMA_USER=HMA_login
+HMA_PASS=HMA_password
 
 HMA_COUNTRIES="at hr cz hu ro sk pl de fr gb nl"
 HMA_CHANGE_IP_INTERVAL=60
